# ZeroSyl

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  TODO.md  clustering-metrics.ipynb  demo-boosting.ipynb  demo-collapsing.ipynb  demo-detect-boundaries.ipynb  demo-quick-start.ipynb  dump_acoustic_codes.py  eval-bitrate-freq.py  eval-boundaries.py  eval-clustering-framewise.py  eval-clustering-maxoverlap.py  eval-clustering.py  eval-loglikelihood.py  eval_bitrate_freq.py  eval_boundaries.py  eval_clustering.py  eval_loglikelihood.py  explainer.ipynb  extract_segments.py  find_codebook_silences.py  hubconf.py  intelligibility_experiments_synthesize.py  intelligibility_experiments_transcribe.py  intelligibility_experiments_transcribe_gt.py  intelligibility_experiments_wer.py  pyproject.toml  quickstart.ipynb  real_demo.ipynb  reproduce_results.sh  synthesize_slow.py  synthesize_with_cache_fast.py  test_generate_sylber.py  test_generate_syllablelm.py  test_generate_zerosyl.py  test_synthesized_speech.py  train_acoustic_model.py  (+15 more)
data/: sample.TextGrid
notebooks/: sylber.ipynb  syllablelm.ipynb
notes/: README.md  train_kmeans.py  train_opt125m_lm.py
notes/constant_shift/: README.md
notes/encoding_with_other_systems/: README.md  sylber.ipynb  syllablelm.ipynb
notes/preparing_librilight/: README.md  script_make_librilight_mmap_with_sil_token.py  script_make_librilight_mmap_without_sil_token.py
visualizations/: view_boosted_embeddings_1k_steps.py  view_boosted_embeddings_25k_steps.py  view_meanpooled_embeddings.py  view_raw_embeddings.py  view_zerosyl_base_boundaries.py  view_zerosyl_discrete_tokens.py
zerosyl/: __init__.py  acoustic.py  cache.py  cli.py  encoder.py  lm.py  model.py  ulm.py  zerosyl.py
zerosyl/eval/: bitrate.py  boundaries.py  clustering.py  loglikelihood.py  tsc.py
zerosyl/utils/: boundaries.py  dump_neucodec_codes.py  encode.py  extract.py  find_codebook_silences.py  misc.py
zerosyl/wavlm/: WavLM.py  __init__.py
zerosyl/wavtokenizer/: configs.py  pretrained.py
zerosyl/wavtokenizer/decoder/: pretrained.py
zerosyl/wavtokenizer/encoder/modules/: transformer.py
zerosyl/wavtokenizer/encoder/quantization/: core_vq.py
